More UI bugfixes (#1138)
* add clearfix mixin and add to header row
* truncate long filenames
* fix homepage bullet alignment
* cardify error pages
* header bullet tweaks
* Added canvas to 3 icons so all four match (#1144)
* Recolored icons to #839EA8
* Bullet sizing etc (#1154)
* change a couple of ems to rems

--- a/frontend/source/sass/base/_utils.scss
+++ b/frontend/source/sass/base/_utils.scss
@@ -39,6 +39,12 @@
   clear: both;
 }
 
+@mixin clearfix() {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 .container {
   width: 100%;
   padding-left: 20px;
