--- a/frontend/source/sass/components/_header.scss
+++ b/frontend/source/sass/components/_header.scss
@@ -4,7 +4,7 @@
   color: $color-gray-lighter;
   font-size: 85%;
   background: $color-gray-dark;
-  padding: .2rem 0;
+  padding: .2em 0;
   text-align: center;
   p {
     margin: 0;
@@ -14,7 +14,7 @@
     vertical-align: baseline;
     position: relative;
     top: 1px;
-    margin-right: .3rem;
+    margin-right: .3em;
   }
   @include media($medium-screen) {
     text-align: left;
@@ -41,9 +41,9 @@ header {
 
 .base-header {
   display: flex;
-  margin-top: 1.6rem;
+  margin-top: 1.6em;
   + .row {
-    margin-top: 1.6rem;
+    margin-top: 1.6em;
   }
 }
 
@@ -62,13 +62,16 @@ header {
   color: $color-primary-alt-lightest;
   font-size: $h4-font-size;
   font-weight: $font-weight-normal;
+  line-height: 1.5;
   letter-spacing: normal;
   margin-bottom: 2em;
 }
 
 .price-callout {
   p {
-    margin: ($space-1x + $space-half) 0 0;
+    opacity: 1;
+    padding-left: 40px;
+    margin: 0;
   }
   h3 {
     font-size: $base-font-size;
@@ -79,37 +82,24 @@ header {
     margin-bottom: 0;
   }
   .icon {
+    margin: ($space-1x + $space-half) 0 0;
     background-repeat: no-repeat;
     background-position: center left;
     display: inline-block;
-    color: $color-primary-alt-lightest;
+    opacity: 0.6;
+    background-size: 30px;
+
     &.icon-ceiling {
       background-image: url('../../images/price-callout/roof.png');
-      background-size: 40px;
-      p {
-        padding-left: 55px;
-      }
     }
     &.icon-fully-burdened {
       background-image: url('../../images/price-callout/mule.png');
-      background-size: 33px;
-      p {
-        padding-left: 43px;
-      }
     }
     &.icon-professional-services {
       background-image: url('../../images/price-callout/briefcase.png');
-      background-size: 28px;
-      p {
-        padding-left: 38px;
-      }
     }
     &.icon-worldwide-rates {
       background-image: url('../../images/price-callout/globe.png');
-      background-size: 28px;
-      p {
-        padding-left: 38px;
-      }
     }
   }
 }
@@ -163,10 +153,10 @@ nav {
       margin: 0 $space-3x;
       border-bottom: $space-1x solid transparent; //so pages with no applicable item still have the right spacing
       &:first-child {
-        margin-left: 0rem;
+        margin-left: 0em;
       }
       &:last-child {
-        margin-right: 0rem;
+        margin-right: 0em;
       }
       &.selected {
         border-bottom: $space-1x solid $color-primary-alt;
@@ -195,8 +185,8 @@ nav {
   nav {
     margin-left: -20px; // to account for container padding
     ul {
-      padding: 1rem;
-      margin-top: 1rem;
+      padding: 1em;
+      margin-top: 1em;
       width: 100%;
       .nav-user-id {
         max-width: 400px;
